--- a/versuch2.html
+++ b/versuch2.html
@@ -14,10 +14,15 @@
         </div>
         <div class="weather">Wetter</div>
         <div class="insta">Insta</div>
-        <div class="rss">Rss</div>
+        <div class="rss">
+            <ul id="rss-feed"></ul>
+        </div>        
         <div class="vbs">vbs</div>
-        <div class="qrcode">qrcode</div>
+        <div class="qrcode">
+            <div id="qrcode"></div>
+        </div>        
     </div>
     <script src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 </body>
 </html>
