--- a/versuch2.html
+++ b/versuch2.html
@@ -12,7 +12,11 @@
             <div class="clock-container"></div>
             <div class="date-container"></div>
         </div>
-        <div class="weather">Wetter</div>
+        <div class="weather">
+            <a class="weatherwidget-io" href="https://forecast7.com/en/46d957d45/bern/" data-label_1="BERN" data-label_2="WEATHER" data-icons="Climacons Animated" data-days="3" data-theme="original">WEATHER</a>
+            <a class="weatherwidget-io" href="https://forecast7.com/en/47d088d28/emmen/" data-label_1="EMMEN" data-label_2="WEATHER" data-icons="Climacons Animated" data-days="3" data-theme="original">WEATHER</a>
+            <a class="weatherwidget-io" href="https://forecast7.com/en/46d767d63/thun/" data-label_1="THUN" data-label_2="WEATHER" data-icons="Climacons Animated" data-days="3" data-theme="original">WEATHER</a>
+        </div>
         <div class="insta">Insta</div>
         <div class="rss">
             <ul id="rss-feed"></ul>
