--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <script src="https://cdn.jsdelivr.net/npm/tsparticles@2.0.0/tsparticles.bundle.min.js"></script>
         <script src="index.js"></script>
     </head>
-    <body onload="sayhi()">
+    <body onload="onpageload()">
         <div id="tsparticles"></div>
         <div class="container" id="fixed_content">
             <div class="item_style" id="time_div">
@@ -139,7 +139,7 @@
                     </div>
                 </div>
             </div>
-            <div id="controlPanel" class="item_style">
+            <div id="controlPanel" class="item_style" style="display: none;">
                 <h2>Control Panel</h2>
                 <label for="current_weather">Aktuelles Wetter</label>
                 <input id="current_weather" type="text" value="sun">
